[workspace]
members = [
    "programs/*"
]
resolver = "2"

[package]
name = "workspace-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-vault-q2-2026 = { path = "programs/anchor-vault-q2-2026" }
anchor-lang = "1.0.2"

[dev-dependencies]
litesvm = "0.10.0"

solana-keypair = "3.1.2"
solana-instruction = "3.4.0"
solana-message = "3.0.1"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
solana-pubkey = "4.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
